--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div class="btn purple" id="purple"></div>
         </div>
     </div>
+    <button class="startbtn">Start Game</button>
     <div class="high">
         High Score : 0
     </div>
