--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
             <div class="btn purple" id="purple"></div>
         </div>
     </div>
+    <div class="extra">
     <button class="startbtn">Start Game</button>
     <div class="high">
         High Score : 0
     </div>
+    </div>  
     <script src="script.js"></script>
 </body>
 </html>
